Fixed Navbar CSS to make signup button size consistent in small pages, made job types more readable when button is inactive, fixed salary bar line bug

--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -61,7 +61,8 @@
     border: 0;
     outline: none;
     cursor: pointer;
-
+    min-height: 66px;
+    min-width: 66px;
 }
 
 .gpt3__navbar-menu {
